<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quanlynhanvien"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@color/green"
        android:textSize="20sp">
    </TextView>
    <LinearLayout
        android:id="@+id/layoutMaNV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_MaNV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MaNV"/>
        <EditText
            android:id="@+id/et_MaNV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:hint="@string/NhapMaNV">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutTenNV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_TenNV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TenNV"/>
        <EditText
            android:id="@+id/et_TenNV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:hint="@string/NhapTenNV">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LoaiNV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LoaiNV"/>
        <RadioGroup
            android:id="@+id/rg_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rd_chinhthuc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/NVFullTime" />

            <RadioButton
                android:id="@+id/rd_thoivu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/ThoiVu" />
        </RadioGroup>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_input"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:text="@string/input"
        android:textAllCaps="false"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_selection"
        android:textColor="@color/black"
        android:background="@color/green"
        android:textSize="18dp"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:choiceMode="singleChoice"
        android:listSelector="@color/blue"
        android:id="@+id/lv_person"/>
</LinearLayout>
